--- a/motivation.html
+++ b/motivation.html
@@ -210,7 +210,7 @@ layout: page
   <tbody>
     <tr>
       <th scope="row"><a target="_blank" href="https://www.adaday.it">Ada Lovelace Day</th>
-      <td>Project Management</td>
+      <td>Event Organisation - Project Management</td>
       <td>Oct 2018</td>
       <td>Italian</td>
     </tr>
@@ -218,7 +218,7 @@ layout: page
   <tbody>
     <tr>
       <th scope="row"><a target="_blank" href="http://www.mupin.it/a-bit-of-history/">A bit of [hi]story</th>
-      <td>Project Management</td>
+      <td>Event Organisation - Project Management</td>
       <td>May 2018</td>
       <td>Italian</td>
     </tr>
@@ -226,7 +226,7 @@ layout: page
   <tbody>
     <tr>
       <th scope="row"><a target="_blank" href="https://www.adaday.it">Ada Lovelace Day</th>
-      <td>Project Management</td>
+      <td>Event Organisation - Project Management</td>
       <td>Oct 2017</td>
       <td>Italian</td>
     </tr>
@@ -234,7 +234,7 @@ layout: page
   <tbody>
     <tr>
       <th scope="row"><a target="_blank" href="http://www.mupin.it/a-bit-of-history/">A bit of [hi]story</th>
-      <td>Project Management</td>
+      <td>Event Organisation - Project Management</td>
       <td>May 2017</td>
       <td>Italian</td>
     </tr>
@@ -242,7 +242,7 @@ layout: page
   <tbody>
     <tr>
       <th scope="row"><a target="_blank" href="https://www.adaday.it">Ada Lovelace Day</th>
-      <td>Project Management</td>
+      <td>Event Organisation - Project Management</td>
       <td>Oct 2016</td>
       <td>Italian</td>
     </tr>
@@ -250,7 +250,7 @@ layout: page
   <tbody>
     <tr>
       <th scope="row"><a target="_blank" href="http://www.mupin.it/a-bit-of-history/">A bit of [hi]story</th>
-      <td>Project Management</td>
+      <td>Event Organisation - Project Management</td>
       <td>May 2016</td>
       <td>Italian</td>
     </tr>
