--- a/articles.html
+++ b/articles.html
@@ -20,6 +20,16 @@ layout: page
   <tbody>
     <tr>
       <th scope="row">
+      	<a target="_blank" href="https://www.bigdata4innovation.it/big-data/data-strategy-e-data-governance/">Data strategy e data governance, quali benefici per le aziende</a>
+      </th>
+      <td>
+      	<a target="_blank" href="https://www.industry4business.it/">BigData4Innovation</a>
+      </td>
+      <td>Jul 2020</td>
+      <td>Italian</td>
+    </tr>
+    <tr>
+      <th scope="row">
       	<a target="_blank" href="https://www.bigdata4innovation.it/big-data/limportanza-della-data-strategy-nella-trasformazione-digitale/">Data strategy, perché è importante nella trasformazione digitale</a>
       </th>
       <td>
