--- a/experience.html
+++ b/experience.html
@@ -11,16 +11,6 @@ layout: page
 <div class="row">
   <div class="col-lg-4">
     <div class="card mb-3">
-      <div class="card-header">Mentor</div>
-      <div class="card-body">
-        <h5 class="card-title">Hack4Cult</h5>
-        <p class="card-text">Hackathon about innovation in cultural participation</p>
-        <p class="card-text">Jul 2020</p>
-      </div>
-    </div>
-  </div>
-  <div class="col-lg-4">
-    <div class="card mb-3">
       <div class="card-header">Solutions Architect</div>
       <div class="card-body">
         <h5 class="card-title">Almaviva</h5>
@@ -31,65 +21,11 @@ layout: page
   </div>
   <div class="col-lg-4">
     <div class="card mb-3">
-      <div class="card-header">Mentor</div>
-      <div class="card-body">
-        <h5 class="card-title">Italy of Tomorrow</h5>
-        <p class="card-text">Hackathon about post COVID-19</p>
-        <p class="card-text">Jul 2020</p>
-      </div>
-    </div>
-  </div>
-</div>
-<div class="row">
-  <div class="col-lg-4">
-    <div class="card mb-3">
-      <div class="card-header">Guest Speaker</div>
-      <div class="card-body">
-        <h5 class="card-title">Rinascita Digitale</h5>
-        <p class="card-text">Design Thinking, Data Strategy, and Scenario Planning</p>
-        <p class="card-text">From May 2020</p>
-      </div>
-    </div>
-  </div>
-  <div class="col-lg-4">
-    <div class="card mb-3">
-      <div class="card-header">Contributing Writer</div>
-      <div class="card-body">
-        <h5 class="card-title">Gruppo Digital360</h5>
-        <p class="card-text">Articles on Design Thinking, Data Strategy, and Scenario Planning</p>
-        <p class="card-text">From Feb 2020</p>
-      </div>
-    </div>
-  </div>
-  <div class="col-lg-4">
-    <div class="card mb-3">
       <div class="card-header">Senior System Engineer</div>
       <div class="card-body">
         <h5 class="card-title">Consoft Sistemi</h5>
         <p class="card-text">Product Management, Project Management, Process Design & Management</p>
         <p class="card-text">From May 2011 to Jun 2020</p>
-      </div>
-    </div>
-  </div>
-</div>
-<div class="row">
-  <div class="col-lg-4">
-    <div class="card mb-3">
-      <div class="card-header">Skill Mentor</div>
-      <div class="card-body">
-        <h5 class="card-title">European Commission</h5>
-        <p class="card-text">EUvsVirus Hackathon & Matchathon</p>
-        <p class="card-text">From Apr to Jun 2020</p>
-      </div>
-    </div>
-  </div>
-  <div class="col-lg-4">
-    <div class="card mb-3">
-      <div class="card-header">Solutions Architect - Pro Bono</div>
-      <div class="card-body">
-        <h5 class="card-title">VoiceMed</h5>
-        <p class="card-text">Web and App Development</p>
-        <p class="card-text">From Apr to May 2020</p>
       </div>
     </div>
   </div>
@@ -112,6 +48,77 @@ layout: page
         <h5 class="card-title">Comau & ESCP Business School</h5>
         <p class="card-text">How coding could impact managerial roles</p>
         <p class="card-text">Feb 2017</p>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-lg-12">
+    <h2>Pro bono Experience</h2>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-lg-4">
+    <div class="card mb-3">
+      <div class="card-header">Mentor</div>
+      <div class="card-body">
+        <h5 class="card-title">Hack4Cult</h5>
+        <p class="card-text">Hackathon about innovation in cultural participation</p>
+        <p class="card-text">Jul 2020</p>
+      </div>
+    </div>
+  </div>
+  <div class="col-lg-4">
+    <div class="card mb-3">
+      <div class="card-header">Mentor</div>
+      <div class="card-body">
+        <h5 class="card-title">Italy of Tomorrow</h5>
+        <p class="card-text">Hackathon about post COVID-19</p>
+        <p class="card-text">Jul 2020</p>
+      </div>
+    </div>
+  </div>
+  <div class="col-lg-4">
+    <div class="card mb-3">
+      <div class="card-header">Guest Speaker</div>
+      <div class="card-body">
+        <h5 class="card-title">Rinascita Digitale</h5>
+        <p class="card-text">Design Thinking, Data Strategy, and Scenario Planning</p>
+        <p class="card-text">From May 2020</p>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="row">
+  <div class="col-lg-4">
+    <div class="card mb-3">
+      <div class="card-header">Contributing Writer</div>
+      <div class="card-body">
+        <h5 class="card-title">Gruppo Digital360</h5>
+        <p class="card-text">Articles on Design Thinking, Data Strategy, and Scenario Planning</p>
+        <p class="card-text">From Feb 2020</p>
+      </div>
+    </div>
+  </div>
+  <div class="col-lg-4">
+    <div class="card mb-3">
+      <div class="card-header">Skill Mentor</div>
+      <div class="card-body">
+        <h5 class="card-title">European Commission</h5>
+        <p class="card-text">EUvsVirus Hackathon & Matchathon</p>
+        <p class="card-text">From Apr to Jun 2020</p>
+      </div>
+    </div>
+  </div>
+  <div class="col-lg-4">
+    <div class="card mb-3">
+      <div class="card-header">Solutions Architect - Pro Bono</div>
+      <div class="card-body">
+        <h5 class="card-title">VoiceMed</h5>
+        <p class="card-text">Web and App Development</p>
+        <p class="card-text">From Apr to May 2020</p>
       </div>
     </div>
   </div>
