--- a/experience.html
+++ b/experience.html
@@ -55,7 +55,7 @@ layout: page
 
 <div class="row">
   <div class="col-lg-12">
-    <h2>Pro bono Experience</h2>
+    <h2>Pro Bono Experience</h2>
   </div>
 </div>
 
