--- a/articles.html
+++ b/articles.html
@@ -18,12 +18,22 @@ layout: page
     </tr>
   </thead>
   <tbody>
+  	<tr>
+      <th scope="row">
+      	<a target="_blank" href="https://www.rinascitadigitale.it/design-thinking-scenario-planning-e-data-strategy-elia-bellussi/">Design Thinking, Scenario Planning e Data Strategy</a>
+      </th>
+      <td>
+      	<a target="_blank" href="https://www.rinascitadigitale.it/">Rinascita Digitale</a>
+      </td>
+      <td>Jul 2020</td>
+      <td>Italian</td>
+    </tr>
     <tr>
       <th scope="row">
       	<a target="_blank" href="https://www.bigdata4innovation.it/big-data/come-creare-una-data-strategy-efficace/">Come creare una data strategy efficace</a>
       </th>
       <td>
-      	<a target="_blank" href="https://www.industry4business.it/">BigData4Innovation</a>
+      	<a target="_blank" href="https://www.bigdata4innovation.it/">BigData4Innovation</a>
       </td>
       <td>Jul 2020</td>
       <td>Italian</td>
@@ -33,7 +43,7 @@ layout: page
       	<a target="_blank" href="https://www.bigdata4innovation.it/big-data/data-strategy-e-data-governance/">Data strategy e data governance, quali benefici per le aziende</a>
       </th>
       <td>
-      	<a target="_blank" href="https://www.industry4business.it/">BigData4Innovation</a>
+      	<a target="_blank" href="https://www.bigdata4innovation.it/">BigData4Innovation</a>
       </td>
       <td>Jul 2020</td>
       <td>Italian</td>
@@ -43,7 +53,7 @@ layout: page
       	<a target="_blank" href="https://www.bigdata4innovation.it/big-data/limportanza-della-data-strategy-nella-trasformazione-digitale/">Data strategy, perché è importante nella trasformazione digitale</a>
       </th>
       <td>
-      	<a target="_blank" href="https://www.industry4business.it/">BigData4Innovation</a>
+      	<a target="_blank" href="https://www.bigdata4innovation.it/">BigData4Innovation</a>
       </td>
       <td>May 2020</td>
       <td>Italian</td>
