--- a/certifications.html
+++ b/certifications.html
@@ -51,6 +51,14 @@ layout: page
   </thead>
   <tbody>
     <tr>
+      <th scope="row"><a target="_blank" href="https://www.coursera.org/account/accomplishments/specialization/certificate/LU8HJ5DLCHVV">Agile Development Specialisation</a></th>
+      <td>University of Virginia Darden School of Business</td>
+      <td>Sep 2020</td>
+      <td>No expiration</td>
+    </tr>
+  </tbody>
+  <tbody>
+    <tr>
       <th scope="row"><a target="_blank" href="https://coursera.org/share/f7f1503106a3632d1ab2d99923c91de5">Design-Led Strategy: Design thinking for business strategy and entrepreneurship</a></th>
       <td>The University of Sydney</td>
       <td>May 2020</td>
