--- a/articles.html
+++ b/articles.html
@@ -20,12 +20,23 @@ layout: page
   <tbody>
   	<tr>
       <th scope="row">
+      	<a target="_blank" href="https://www.industry4business.it/industria-4-0/design-thinking-quali-sono-i-tool-digitali-da-usare/">Design thinking, quali sono i tool digitali da usare</a>
+      </th>
+      <td>
+      	<a target="_blank" href="https://www.industry4business.it/">Industry4Business</a>
+      </td>
+      <td>September 2020</td>
+      <td>Italian</td>
+    </tr>
+    <tr>
+  	<tr>
+      <th scope="row">
       	<a target="_blank" href="https://www.rinascitadigitale.it/design-thinking-scenario-planning-e-data-strategy-elia-bellussi/">Design Thinking, Scenario Planning e Data Strategy</a>
       </th>
       <td>
       	<a target="_blank" href="https://www.rinascitadigitale.it/">Rinascita Digitale</a>
       </td>
-      <td>Jul 2020</td>
+      <td>July 2020</td>
       <td>Italian</td>
     </tr>
     <tr>
@@ -35,7 +46,7 @@ layout: page
       <td>
       	<a target="_blank" href="https://www.bigdata4innovation.it/">BigData4Innovation</a>
       </td>
-      <td>Jul 2020</td>
+      <td>July 2020</td>
       <td>Italian</td>
     </tr>
     <tr>
@@ -45,7 +56,7 @@ layout: page
       <td>
       	<a target="_blank" href="https://www.bigdata4innovation.it/">BigData4Innovation</a>
       </td>
-      <td>Jul 2020</td>
+      <td>July 2020</td>
       <td>Italian</td>
     </tr>
     <tr>
