--- a/motivation.html
+++ b/motivation.html
@@ -124,7 +124,7 @@ layout: page
       <th scope="row"><a target="_blank" href="https://www.ieee.org/">IEEE</th>
       <td>Member</td>
       <td>2010</td>
-      <td>2020</td>
+      <td>Present</td>
     </tr>
   </tbody>
   <tbody>
@@ -140,7 +140,7 @@ layout: page
       <th scope="row"><a target="_blank" href="http://www.nordestdigitale.com/">Nord-est Digitale</th>
       <td>Scientific Committee</td>
       <td>2012</td>
-      <td>2020</td>
+      <td>Present</td>
     </tr>
   </tbody>
   <tbody>
@@ -148,7 +148,7 @@ layout: page
       <th scope="row"><a target="_blank" href="https://www.statigeneralinnovazione.it/online/">Stati Generali dell'Innovazione</th>
       <td>Member</td>
       <td>2014</td>
-      <td>2020</td>
+      <td>Present</td>
     </tr>
   </tbody>
   <tbody>
@@ -156,7 +156,7 @@ layout: page
       <th scope="row"><a target="_blank" href="https://www.clubdi.org/">Club Dirigenti Informatici</th>
       <td>Member</td>
       <td>2015</td>
-      <td>2020</td>
+      <td>Present</td>
     </tr>
   </tbody>
   <tbody>
@@ -164,7 +164,7 @@ layout: page
       <th scope="row"><a target="_blank" href="http://nex.to.it/">NexTo</th>
       <td>Member</td>
       <td>2017</td>
-      <td>2020</td>
+      <td>Present</td>
     </tr>
   </tbody>
   <tbody>
@@ -172,7 +172,7 @@ layout: page
       <th scope="row"><a target="_blank" href="https://www.aicanet.it/storia-informatica/gruppo-di-lavoro-storia-informatica">AICA</th>
       <td>History of Computer Science Team</td>
       <td>2017</td>
-      <td>2020</td>
+      <td>Present</td>
     </tr>
   </tbody>
   <tbody>
@@ -180,7 +180,7 @@ layout: page
       <th scope="row"><a target="_blank" href="http://www.mupin.it/">Museo Piemontese dell'Informatica</th>
       <td>Member</td>
       <td>2019</td>
-      <td>2020</td>
+      <td>Present</td>
     </tr>
   </tbody>
 </table>
