--- a/motivation.html
+++ b/motivation.html
@@ -107,7 +107,7 @@ layout: page
 
 <div class="row">
   <div class="col-lg-12">
-    <h3>Membership</h3>
+    <h3>Memberships</h3>
   </div>
 </div>
 <table class="table table-hover">
@@ -187,7 +187,7 @@ layout: page
 
 <div class="row">
   <div class="col-lg-12">
-    <h3>Project</h3>
+    <h3>Projects</h3>
   </div>
 </div>
 <table class="table table-hover">
