--- a/certifications.html
+++ b/certifications.html
@@ -49,6 +49,30 @@ layout: page
       <th scope="col">Expiration</th>
     </tr>
   </thead>
+    <tbody>
+    <tr>
+      <th scope="row"><a target="_blank" href="https://coursera.org/share/51c3146f66d27a99bfc4489e16874173">Organizational Design and Management</a></th>
+      <td>HEC Paris</td>
+      <td>September 2020</td>
+      <td>No expiration</td>
+    </tr>
+  </tbody>
+    <tbody>
+    <tr>
+      <th scope="row"><a target="_blank" href="https://coursera.org/share/0c1c01a9aad88cbd20a1639323c7917a">Strategic Management of Innovation</a></th>
+      <td>HEC Paris</td>
+      <td>September 2020</td>
+      <td>No expiration</td>
+    </tr>
+  </tbody>
+    <tbody>
+    <tr>
+      <th scope="row"><a target="_blank" href="https://coursera.org/share/c624b90a74bf8cfc6c6bd36d4f33a892">Boosting Creativity for Innovation</a></th>
+      <td>HEC Paris</td>
+      <td>September 2020</td>
+      <td>No expiration</td>
+    </tr>
+  </tbody>
   <tbody>
     <tr>
       <th scope="row"><a target="_blank" href="https://www.coursera.org/account/accomplishments/specialization/certificate/LU8HJ5DLCHVV">Agile Development Specialisation</a></th>
