--- a/presentations.html
+++ b/presentations.html
@@ -11,12 +11,25 @@ layout: page
 <div class="row">
 	<div class="col-lg-4">
 		<div class="card mb-3">
+			<h3 class="card-header">Product Management</h3>
+			<div class="card-body">
+		    	<h5 class="card-title">Design Thinking</h5>
+		    	<h6 class="card-subtitle text-muted">Comprenderlo per innovare il proprio business</h6>
+	  			<img style="height: 200px; width: 100%; display: block;" src="/attachment/2020-09-30_IH_DesignThinking.png" alt="Presentation on Scenario Planning">
+	    		<p class="card-text">Italian version for Impact Hub - September 2020.</p>
+	    		<a href="/attachment/2020-09-30_IH_DesignThinking.pdf" target="_blank" class="card-link">Download</a>
+	    		<a href="" target="_blank" class="card-link">Video</a>
+	  	  </div>
+		</div>
+	</div>
+	<div class="col-lg-4">
+		<div class="card mb-3">
 			<h3 class="card-header">Strategy</h3>
 			<div class="card-body">
 		    	<h5 class="card-title">Scenario Planning</h5>
 		    	<h6 class="card-subtitle text-muted">Immaginare il futuro...</h6>
 	  			<img style="height: 200px; width: 100%; display: block;" src="/attachment/2020-06-03_FullTalkOnScenarioPlanning.png" alt="Presentation on Scenario Planning">
-	    		<p class="card-text">Italian version from Rinascita Digitale - June 2020.</p>
+	    		<p class="card-text">Italian version for Rinascita Digitale - June 2020.</p>
 	    		<a href="/attachment/2020-06-03_FullTalkOnScenarioPlanning.pdf" target="_blank" class="card-link">Download</a>
 	    		<a href="https://youtu.be/PHAJVZJ7R68" target="_blank" class="card-link">Video</a>
 	  	  </div>
@@ -29,25 +42,12 @@ layout: page
 	    		<h5 class="card-title">Data Strategy</h5>
 	    		<h6 class="card-subtitle text-muted">Understanding Data Strategy</h6>
 	  			<img style="height: 200px; width: 100%; display: block;" src="/attachment/2020-05-26_FullTalkOnDataStrategy.png" alt="Presentation on Data Strategy">
-    			<p class="card-text">Italian version from Rinascita Digitale - May 2020.</p>
+    			<p class="card-text">Italian version for Rinascita Digitale - May 2020.</p>
     			<a href="/attachment/2020-05-26_FullTalkOnDataStrategy.pdf" target="_blank" class="card-link">Download</a>
     			<a href="https://youtu.be/rkYvs_BkKto" target="_blank" class="card-link">Video</a>
   	  		</div>
 		</div>
 	</div>	
-	<div class="col-lg-4">
-		<div class="card mb-3">
-			<h3 class="card-header">Product Management</h3>
-			<div class="card-body">
-		    	<h5 class="card-title">Design Thinking</h5>
-		    	<h6 class="card-subtitle text-muted">An Agile Approach - Full Talk</h6>
-	  			<img style="height: 200px; width: 100%; display: block;" src="/attachment/FullTalkOnDesignThinking.png" alt="Presentation on Design Thinking">
-	    		<p class="card-text">Italian version from Rinascita Digitale - May 2020.</p>
-	    		<a href="/attachment/2020-05-18_FullTalkOnDesignThinking.pdf" target="_blank" class="card-link">Download</a>
-    			<a href="https://youtu.be/w26lo9rNIIs" target="_blank" class="card-link">Video</a>
-         	</div>
-		</div>
-	</div>
 </div>
 
 <div class="row">
@@ -56,9 +56,22 @@ layout: page
 			<h3 class="card-header">Product Management</h3>
 			<div class="card-body">
 		    	<h5 class="card-title">Design Thinking</h5>
+		    	<h6 class="card-subtitle text-muted">An Agile Approach - Full Talk</h6>
+	  			<img style="height: 200px; width: 100%; display: block;" src="/attachment/FullTalkOnDesignThinking.png" alt="Presentation on Design Thinking">
+	    		<p class="card-text">Italian version for Rinascita Digitale - May 2020.</p>
+	    		<a href="/attachment/2020-05-18_FullTalkOnDesignThinking.pdf" target="_blank" class="card-link">Download</a>
+    			<a href="https://youtu.be/w26lo9rNIIs" target="_blank" class="card-link">Video</a>
+         	</div>
+		</div>
+	</div>
+	<div class="col-lg-4">
+		<div class="card mb-3">
+			<h3 class="card-header">Product Management</h3>
+			<div class="card-body">
+		    	<h5 class="card-title">Design Thinking</h5>
 		    	<h6 class="card-subtitle text-muted">An Agile Approach - Ten Tips Talk</h6>
 	  			<img style="height: 200px; width: 100%; display: block;" src="/attachment/TenTipsOnDesignThinking.png" alt="Presentation on Design Thinking">
-	    		<p class="card-text">Italian version from Rinascita Digitale: Ten Tips Talk - May 2020.</p>
+	    		<p class="card-text">Italian version for Rinascita Digitale: Ten Tips Talk - May 2020.</p>
 	    		<a href="/attachment/2020-05-13_TenTipsOnDesignThinking.pdf" target="_blank" class="card-link">Download</a>
 	    		<a href="https://youtu.be/uklZuWJSNTs" target="_blank" class="card-link">Video</a>
 	  	  </div>
@@ -71,7 +84,7 @@ layout: page
 	    		<h5 class="card-title">Design Thinking</h5>
 	    		<h6 class="card-subtitle text-muted">An agile approach to product development</h6>
 	  			<img style="height: 200px; width: 100%; display: block;" src="/attachment/DesignThinking.png" alt="Presentation on Design Thinking">
-    			<p class="card-text">Italian version from GDG DevePary Italy - May 2020.</p>
+    			<p class="card-text">Italian version for GDG DevePary Italy - May 2020.</p>
     			<a href="/attachment/2020-05-03_GDGDevPartyTogether_DesignThinking.pdf" target="_blank" class="card-link">Download</a>
     			<a href="https://youtu.be/Dprq6_NjyOo" target="_blank" class="card-link">Video</a>
   	  		</div>
