--- a/presentations.html
+++ b/presentations.html
@@ -18,7 +18,7 @@ layout: page
 	  			<img style="height: 200px; width: 100%; display: block;" src="/attachment/2020-09-30_IH_DesignThinking.png" alt="Presentation on Scenario Planning">
 	    		<p class="card-text">Italian version for Impact Hub - September 2020.</p>
 	    		<a href="/attachment/2020-09-30_IH_DesignThinking.pdf" target="_blank" class="card-link">Download</a>
-	    		<a href="" target="_blank" class="card-link">Video</a>
+	    		<a class="card-link">Video</a>
 	  	  </div>
 		</div>
 	</div>
