--- a/presentations.html
+++ b/presentations.html
@@ -14,7 +14,7 @@ layout: page
 			<h3 class="card-header">Product Management</h3>
 			<div class="card-body">
 		    	<h5 class="card-title">Design Thinking</h5>
-		    	<h6 class="card-subtitle text-muted">Comprenderlo per innovare il proprio business</h6>
+		    	<h6 class="card-subtitle text-muted">Comprenderlo per innovare...</h6>
 	  			<img style="height: 200px; width: 100%; display: block;" src="/attachment/2020-09-30_IH_DesignThinking.png" alt="Presentation on Scenario Planning">
 	    		<p class="card-text">Italian version for Impact Hub - September 2020.</p>
 	    		<a href="/attachment/2020-09-30_IH_DesignThinking.pdf" target="_blank" class="card-link">Download</a>
