--- a/experience.html
+++ b/experience.html
@@ -21,7 +21,7 @@ layout: page
   </div>
   <div class="col-lg-4">
     <div class="card mb-3">
-      <div class="card-header">Teacher Assistan</div>
+      <div class="card-header">Teacher Assistant</div>
       <div class="card-body">
         <h5 class="card-title">SAA - Scuola di Amministrazione Aziendale</h5>
         <p class="card-text">Managing Information Systems Course</p>
