--- a/experience.html
+++ b/experience.html
@@ -23,7 +23,7 @@ layout: page
     <div class="card mb-3">
       <div class="card-header">Teacher Assistant</div>
       <div class="card-body">
-        <h5 class="card-title">SAA - Scuola di Amministrazione Aziendale</h5>
+        <h5 class="card-title">SAA - School of Management</h5>
         <p class="card-text">Managing Information Systems Course</p>
         <p class="card-text">From Nov 2020</p>
       </div>
