--- a/certifications.html
+++ b/certifications.html
@@ -19,13 +19,17 @@ layout: page
   </thead>
   <tbody>
     <tr>
+      <th scope="row"><a target="_blank" href="/attachment/PSMI.pdf">Professional Scrum Master I</a></th>
+      <td>Scrum.org</td>
+      <td>January 2021</td>
+      <td>No expiration</td>
+    </tr>
+    <tr>
       <th scope="row"><a target="_blank" href="/attachment/FoundationsInDesignThinkingCertificate.pdf">Foundation in Design Thinking</a></th>
       <td>IDEO</td>
       <td>April 2020</td>
       <td>No expiration</td>
     </tr>
-  </tbody>
-  <tbody>
     <tr>
       <th scope="row"><a target="_blank" href="/attachment/ITIL-Certification.pdf">ITIL Foundation Certificate</a></th>
       <td>PeopleCert & Axelos</td>
@@ -49,207 +53,157 @@ layout: page
       <th scope="col">Expiration</th>
     </tr>
   </thead>
-    <tbody>
+  <tbody>
     <tr>
       <th scope="row"><a target="_blank" href="https://coursera.org/share/51c3146f66d27a99bfc4489e16874173">Organizational Design and Management</a></th>
       <td>HEC Paris</td>
       <td>September 2020</td>
       <td>No expiration</td>
     </tr>
-  </tbody>
-    <tbody>
     <tr>
       <th scope="row"><a target="_blank" href="https://coursera.org/share/0c1c01a9aad88cbd20a1639323c7917a">Strategic Management of Innovation</a></th>
       <td>HEC Paris</td>
       <td>September 2020</td>
       <td>No expiration</td>
     </tr>
-  </tbody>
-    <tbody>
     <tr>
       <th scope="row"><a target="_blank" href="https://coursera.org/share/c624b90a74bf8cfc6c6bd36d4f33a892">Boosting Creativity for Innovation</a></th>
       <td>HEC Paris</td>
       <td>September 2020</td>
       <td>No expiration</td>
     </tr>
-  </tbody>
-  <tbody>
     <tr>
       <th scope="row"><a target="_blank" href="https://www.coursera.org/account/accomplishments/specialization/certificate/LU8HJ5DLCHVV">Agile Development Specialisation</a></th>
       <td>University of Virginia Darden School of Business</td>
       <td>September 2020</td>
       <td>No expiration</td>
     </tr>
-  </tbody>
-  <tbody>
     <tr>
       <th scope="row"><a target="_blank" href="https://coursera.org/share/f7f1503106a3632d1ab2d99923c91de5">Design-Led Strategy: Design thinking for business strategy and entrepreneurship</a></th>
       <td>The University of Sydney</td>
       <td>May 2020</td>
       <td>No expiration</td>
     </tr>
-  </tbody>
-  <tbody>
     <tr>
       <th scope="row"><a target="_blank" href="https://coursera.org/share/45da319917f2fdf2ee949d79f424f657">Innovation Management</a></th>
       <td>Erasmus Universiteit Rotterdam</td>
       <td>April 2020</td>
       <td>No expiration</td>
     </tr>
-  </tbody>
-  <tbody>
     <tr>
       <th scope="row"><a target="_blank" href="https://coursera.org/share/479ae34f5312be1aa83a1a7f41e901c0">Big Data Specialisation</a></th>
       <td>University of California - Davis</td>
       <td>April 2020</td>
       <td>No expiration</td>
     </tr>
-  </tbody>
-  <tbody>
     <tr>
       <th scope="row"><a target="_blank" href="https://c46e136a583f7e334124-ac22991740ab4ff17e21daf2ed577041.ssl.cf1.rackcdn.com/Certificate/ScrumFundamentalsCertified-EliaBellussi-771658.pdf">Scrum Fundamentals Certified</a></th>
       <td>Scrum Study</td>
       <td>April 2020</td>
       <td>No expiration</td>
     </tr>
-  </tbody>
-  <tbody>
     <tr>
       <th scope="row"><a target="_blank" href="https://coursera.org/share/479ae34f5312be1aa83a1a7f41e901c0">Alternative Finance</a></th>
       <td>Politecnico di Milano</td>
       <td>January 2020</td>
       <td>No expiration</td>
     </tr>
-  </tbody>
-  <tbody>
     <tr>
       <th scope="row"><a target="_blank" href="https://analytics.google.com/analytics/academy/certificate/7fkopXg0RUWYwAkZwd146g">Advanced Google Analytics</a></th>
       <td>Google Analytics Academy</td>
       <td>October 2019</td>
       <td>October 2022</td>
     </tr>
-  </tbody>
-  <tbody>
     <tr>
       <th scope="row"><a target="_blank" href="https://analytics.google.com/analytics/academy/certificate/yds7retDSayLFCa_IZVZuQ">Google Analytics for Beginners</a></th>
       <td>Google Analytics Academy</td>
       <td>October 2019</td>
       <td>October 2022</td>
     </tr>
-  </tbody>
-  <tbody>
     <tr>
       <th scope="row"><a target="_blank" href="https://coursera.org/share/479ae34f5312be1aa83a1a7f41e901c0">Gamification</a></th>
       <td>Whartan - University of Pennsylvania</td>
       <td>October 2019</td>
       <td>No expiration</td>
     </tr>
-  </tbody>
-  <tbody>
     <tr>
       <th scope="row"><a target="_blank" href="https://courses.edx.org/certificates/da1a089be80b406c8ea7dfd79c8aa7ff">Becoming an Entrepreneur</a></th>
       <td>MITx - Massachusetts Institute of Technology</td>
       <td>September 2019</td>
       <td>No expiration</td>
     </tr>
-  </tbody>
-  <tbody>
     <tr>
       <th scope="row"><a target="_blank" href="https://www.credential.net/84e1e916-3725-4213-ada4-5f262809686d">Understanding Blockchain Technology: The Cost and Benefits of Decentralization</a></th>
       <td>IEEE</td>
       <td>November 2018</td>
       <td>No expiration</td>
     </tr>
-  </tbody>
-  <tbody>
     <tr>
       <th scope="row"><a target="_blank" href="https://www.credential.net/40cdf4e4-31ee-4d9a-a82c-85fad3f54759">Understanding Blockchain Technology: Abstracting the Blockchain</a></th>
       <td>IEEE</td>
       <td>November 2018</td>
       <td>No expiration</td>
     </tr>
-  </tbody>
-  <tbody>
     <tr>
       <th scope="row"><a target="_blank" href="https://www.credential.net/cf9480a7-1943-4d64-8346-f25fb4a3c5b8">Understanding Blockchain Technology: The Bitcoin Case Study</a></th>
       <td>IEEE</td>
       <td>November 2018</td>
       <td>No expiration</td>
     </tr>
-  </tbody>
-  <tbody>
     <tr>
       <th scope="row"><a target="_blank" href="https://courses.edx.org/certificates/da1a089be80b406c8ea7dfd79c8aa7ff">Financial Markets</a></th>
       <td>Yale</td>
       <td>September 2018</td>
       <td>No expiration</td>
     </tr>
-  </tbody>
-  <tbody>
     <tr>
       <th scope="row"><a target="_blank" href="https://www.coursera.org/account/accomplishments/verify/77Q6S7RG4A6M">Arts and Heritage Management</a></th>
       <td>Università Commerciale Luigi Bocconi</td>
       <td>August 2018</td>
       <td>No expiration</td>
     </tr>
-  </tbody>
-  <tbody>
     <tr>
       <th scope="row"><a target="_blank" href="https://www.coursera.org/account/accomplishments/verify/L327DLBY4WBR">International Leadership and Organizational Behavior</a></th>
       <td>Università Commerciale Luigi Bocconi</td>
       <td>September 2017</td>
       <td>No expiration</td>
     </tr>
-  </tbody>
-  <tbody>
     <tr>
       <th scope="row"><a target="_blank" href="https://university.mongodb.com/course_completion/e4fcad5c-64f6-40fc-a969-499eaa47">MongoDB for Java Developers</a></th>
       <td>MongoDB</td>
       <td>September 2017</td>
       <td>No expiration</td>
     </tr>
-  </tbody>
-  <tbody>
     <tr>
       <th scope="row"><a target="_blank" href="https://university.mongodb.com/course_completion/69f7abe1-edfe-4d8f-b74d-8a662eba">MongoDB for Developers</a></th>
       <td>MongoDB</td>
       <td>September 2017</td>
       <td>No expiration</td>
     </tr>
-  </tbody>
-  <tbody>
     <tr>
       <th scope="row"><a target="_blank" href="https://university.mongodb.com/course_completion/6889a592-2d25-4f7c-bc34-7eb5cf35">MongoDB for DBAs</a></th>
       <td>MongoDB</td>
       <td>September 2017</td>
       <td>No expiration</td>
     </tr>
-  </tbody>
-  <tbody>
     <tr>
       <th scope="row"><a target="_blank" href="https://university.mongodb.com/course_completion/175b6a89-aa47-4df9-acc2-eaaf20e5">MonoDB - Diagnostics and Debugging</a></th>
       <td>MongoDB</td>
       <td>September 2017</td>
       <td>No expiration</td>
     </tr>
-  </tbody>
-  <tbody>
     <tr>
       <th scope="row"><a target="_blank" href="https://university.mongodb.com/course_completion/8dccf041-7f67-40f5-a4fb-e1406740">MongoDB - Security</a></th>
       <td>MongoDB</td>
       <td>September 2017</td>
       <td>No expiration</td>
     </tr>
-  </tbody>
-  <tbody>
     <tr>
       <th scope="row"><a target="_blank" href="https://university.mongodb.com/course_completion/34704980-e8f0-4d06-8bd3-c677ba58">MongoDB - Performance</a></th>
       <td>MongoDB</td>
       <td>August 2017</td>
       <td>No expiration</td>
     </tr>
-  </tbody>
-  <tbody>
     <tr>
       <th scope="row"><a target="_blank" href="https://university.mongodb.com/course_completion/325ca890-e30a-4d87-abb5-aca4a595">MongoDB - Basics</a></th>
       <td>MongoDB</td>
