--- a/motivation.html
+++ b/motivation.html
@@ -10,6 +10,34 @@ layout: page
 
 <div class="row">
   <div class="col-lg-12">
+    <h3>Interviews</h3>
+  </div>
+</div>
+<table class="table table-hover">
+  <thead>
+    <tr>
+      <th scope="col">Title</th>
+      <th scope="col">Magazine</th>
+      <th scope="col">Issued</th>
+      <th scope="col">Language</th>
+    </tr>
+  </thead>
+  <tbody>
+  	<tr>
+      <th scope="row">
+      	<a target="_blank" href="https://scaleapse.com/elia-bellussi-interview/?utm_source=linkedin&utm_medium=social-organic&utm_campaign=base">How Design Thinking, Data Strategy and Scenario Planning can help startups</a>
+      </th>
+      <td>
+      	<a target="_blank" href="https://scaleapse.com">Scaleapse</a>
+      </td>
+      <td>Apr 2021</td>
+      <td>English</td>
+    </tr>
+  </tbody>
+</table> 
+
+<div class="row">
+  <div class="col-lg-12">
     <h3>Events</h3>
   </div>
 </div>
