--- a/experience.html
+++ b/experience.html
@@ -11,24 +11,36 @@ layout: page
 <div class="row">
   <div class="col-lg-4">
     <div class="card mb-3">
-      <div class="card-header">Solutions Architect</div>
+      <div class="card-header">Senior Strategy & Innovation Officer</div>
       <div class="card-body">
-        <h5 class="card-title">Almaviva</h5>
-        <p class="card-text">Development of Architectural Solutions with Big Data, IoT, ML, Blockchain and GIS integrations.</p>
-        <p class="card-text">From Jun 2020</p>
+        <h5 class="card-title">EGI Foundation</h5>
+        <p class="card-text">CSI Manager</p>
+        <p class="card-text">From July 2022</p>
       </div>
     </div>
   </div>
   <div class="col-lg-4">
     <div class="card mb-3">
-      <div class="card-header">Teacher Assistant</div>
+      <div class="card-header">Contract Professor</div>
       <div class="card-body">
-        <h5 class="card-title">SAA - School of Management</h5>
-        <p class="card-text">Managing Information Systems Course</p>
+        <h5 class="card-title">University of Turin - Department of Management</h5>
+        <p class="card-text">Sustainability & Digital Transformation</p>
         <p class="card-text">From Nov 2020</p>
       </div>
     </div>
   </div>
+  <div class="col-lg-4">
+    <div class="card mb-3">
+      <div class="card-header">Solutions Architect</div>
+      <div class="card-body">
+        <h5 class="card-title">Almaviva</h5>
+        <p class="card-text">Development of Architectural Solutions with Big Data, IoT, ML, Blockchain and GIS integrations.</p>
+        <p class="card-text">From Jun 2020 to July 2022</p>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="row">
   <div class="col-lg-4">
     <div class="card mb-3">
       <div class="card-header">Senior System Engineer</div>
@@ -39,8 +51,6 @@ layout: page
       </div>
     </div>
   </div>
-</div>
-<div class="row">
   <div class="col-lg-4">
     <div class="card mb-3">
       <div class="card-header">Corporate Business Solution Manager</div>
