--- a/certifications.html
+++ b/certifications.html
@@ -19,6 +19,24 @@ layout: page
   </thead>
   <tbody>
     <tr>
+      <th scope="row"><a target="_blank" href="/attachment/27001.pdf">ICO ISMS 27001:2022 Foundation </a></th>
+      <td>Scrum.org</td>
+      <td>September 2023</td>
+      <td>No expiration</td>
+    </tr>
+    <tr>
+      <th scope="row"><a target="_blank" href="https://www.credly.com/badges/e1fb06d7-bc24-4e82-b7fc-57b9a30b2145/linked_in_profile">FitSM Advanced Service Planning and Delivery</a></th>
+      <td>Scrum.org</td>
+      <td>July 2022</td>
+      <td>No expiration</td>
+    </tr>
+    <tr>
+      <th scope="row"><a target="_blank" href="https://www.credly.com/badges/7d3acf91-708f-4bb7-9644-49d30caad4a5/linked_in_profile">FitSM Foundation</a></th>
+      <td>Scrum.org</td>
+      <td>September 2022</td>
+      <td>No expiration</td>
+    </tr>
+    <tr>
       <th scope="row"><a target="_blank" href="/attachment/PSMI.pdf">Professional Scrum Master I</a></th>
       <td>Scrum.org</td>
       <td>January 2021</td>
@@ -54,6 +72,18 @@ layout: page
     </tr>
   </thead>
   <tbody>
+    <tr>
+      <th scope="row"><a target="_blank" href="https://www.coursera.org/account/accomplishments/verify/ZQEXD9BS5FBM">Sustainable Digital Innovation</a></th>
+      <td>HEC Paris</td>
+      <td>March 2023</td>
+      <td>No expiration</td>
+    </tr>
+    <tr>
+      <th scope="row"><a target="_blank" href="https://www.coursera.org/account/accomplishments/verify/QBTDDNQNPJRJ">OKR Certification: Leadership and Goal Setting</a></th>
+      <td>HEC Paris</td>
+      <td>September 2020</td>
+      <td>No expiration</td>
+    </tr>
     <tr>
       <th scope="row"><a target="_blank" href="https://coursera.org/share/51c3146f66d27a99bfc4489e16874173">Organizational Design and Management</a></th>
       <td>HEC Paris</td>
