--- a/education.html
+++ b/education.html
@@ -13,7 +13,7 @@ layout: page
       <div class="card-header">MSc in Artificial Intelligence</div>
       <div class="card-body">
         <h5 class="card-title">Università di Torino</h5>
-        <p class="card-text">Oct 2011 - Expected 2021</p>
+        <p class="card-text">Expected 2025</p>
       </div>
     </div>
   </div>
