--- a/experience.html
+++ b/experience.html
@@ -21,7 +21,7 @@ layout: page
   </div>
   <div class="col-lg-4">
     <div class="card mb-3">
-      <div class="card-header">Contract Professor</div>
+      <div class="card-header">Adjunct Professor</div>
       <div class="card-body">
         <h5 class="card-title">University of Turin - Department of Management</h5>
         <p class="card-text">Sustainability & Digital Transformation</p>
