--- a/motivation.html
+++ b/motivation.html
@@ -135,6 +135,37 @@ layout: page
 
 <div class="row">
   <div class="col-lg-12">
+    <h3>Business Angel & Investor</h3>
+  </div>
+</div>
+<table class="table table-hover">
+  <thead>
+    <tr>
+      <th scope="col">Title</th>
+      <th scope="col">Since</th>
+      <th scope="col">To</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th scope="row">
+      	<a target="_blank" href="https://www.empethy.it/">Empethy</a>
+      </th>
+      <td>2023</td>
+      <td>Present</td>
+    </tr>
+  	<tr>
+      <th scope="row">
+      	<a target="_blank" href="https://milan.impacthub.net/">Impact Hub Milano</a>
+      </th>
+      <td>2015</td>
+      <td>Present</td>
+    </tr>
+  </tbody>
+</table> 
+
+<div class="row">
+  <div class="col-lg-12">
     <h3>Memberships</h3>
   </div>
 </div>
@@ -149,41 +180,41 @@ layout: page
   </thead>
   <tbody>
     <tr>
-      <th scope="row"><a target="_blank" href="https://www.ieee.org/">IEEE</th>
-      <td>Member</td>
-      <td>2010</td>
-      <td>Present</td>
-    </tr>
-  </tbody>
-  <tbody>
-    <tr>
       <th scope="row"><a target="_blank" href="http://www.mupin.it/">Museo Piemontese dell'Informatica</th>
       <td>President</td>
-      <td>2011</td>
-      <td>2018</td>
-    </tr>
-  </tbody>
-  <tbody>
-    <tr>
-      <th scope="row"><a target="_blank" href="http://www.nordestdigitale.com/">Nord-est Digitale</th>
-      <td>Scientific Committee</td>
-      <td>2012</td>
-      <td>Present</td>
-    </tr>
-  </tbody>
-  <tbody>
-    <tr>
-      <th scope="row"><a target="_blank" href="https://www.statigeneralinnovazione.it/online/">Stati Generali dell'Innovazione</th>
-      <td>Member</td>
-      <td>2014</td>
+      <td>2021</td>
       <td>Present</td>
     </tr>
   </tbody>
   <tbody>
     <tr>
       <th scope="row"><a target="_blank" href="https://www.clubdi.org/">Club Dirigenti Informatici</th>
+      <td>Board Member</td>
+      <td>2021</td>
+      <td>Present</td>
+    </tr>
+  </tbody> 
+  <tbody>
+    <tr>
+      <th scope="row"><a target="_blank" href="https://angels4impact.net/">Angels for Impact</th>
+      <td>Business Angel - Member</td>
+      <td>2021</td>
+      <td>Present</td>
+    </tr>
+  </tbody> 
+  <tbody>
+    <tr>
+      <th scope="row"><a target="_blank" href="http://www.mupin.it/">Museo Piemontese dell'Informatica</th>
       <td>Member</td>
-      <td>2015</td>
+      <td>2019</td>
+      <td>2021</td>
+    </tr>
+  </tbody>
+  <tbody>
+    <tr>
+      <th scope="row"><a target="_blank" href="https://www.aicanet.it/storia-informatica/gruppo-di-lavoro-storia-informatica">AICA</th>
+      <td>History of Computer Science Team</td>
+      <td>2017</td>
       <td>Present</td>
     </tr>
   </tbody>
@@ -197,17 +228,41 @@ layout: page
   </tbody>
   <tbody>
     <tr>
-      <th scope="row"><a target="_blank" href="https://www.aicanet.it/storia-informatica/gruppo-di-lavoro-storia-informatica">AICA</th>
-      <td>History of Computer Science Team</td>
-      <td>2017</td>
+      <th scope="row"><a target="_blank" href="https://www.clubdi.org/">Club Dirigenti Informatici</th>
+      <td>Member</td>
+      <td>2015</td>
+      <td>2021</td>
+    </tr>
+  </tbody> 
+  <tbody>
+    <tr>
+      <th scope="row"><a target="_blank" href="https://www.statigeneralinnovazione.it/online/">Stati Generali dell'Innovazione</th>
+      <td>Member</td>
+      <td>2014</td>
+      <td>Present</td>
+    </tr>
+  </tbody>
+  <tbody>
+    <tr>
+      <th scope="row"><a target="_blank" href="http://www.nordestdigitale.com/">Nord-est Digitale</th>
+      <td>Scientific Committee</td>
+      <td>2012</td>
       <td>Present</td>
     </tr>
   </tbody>
   <tbody>
     <tr>
       <th scope="row"><a target="_blank" href="http://www.mupin.it/">Museo Piemontese dell'Informatica</th>
+      <td>President</td>
+      <td>2011</td>
+      <td>2018</td>
+    </tr>
+  </tbody>
+  <tbody>
+    <tr>
+      <th scope="row"><a target="_blank" href="https://www.ieee.org/">IEEE</th>
       <td>Member</td>
-      <td>2019</td>
+      <td>2010</td>
       <td>Present</td>
     </tr>
   </tbody>
