--- a/certifications.html
+++ b/certifications.html
@@ -20,19 +20,19 @@ layout: page
   <tbody>
     <tr>
       <th scope="row"><a target="_blank" href="/attachment/27001.pdf">ICO ISMS 27001:2022 Foundation </a></th>
-      <td>Scrum.org</td>
+      <td>ICO-CERTg</td>
       <td>September 2023</td>
       <td>No expiration</td>
     </tr>
     <tr>
       <th scope="row"><a target="_blank" href="https://www.credly.com/badges/e1fb06d7-bc24-4e82-b7fc-57b9a30b2145/linked_in_profile">FitSM Advanced Service Planning and Delivery</a></th>
-      <td>Scrum.org</td>
+      <td>APMG</td>
       <td>July 2022</td>
       <td>No expiration</td>
     </tr>
     <tr>
       <th scope="row"><a target="_blank" href="https://www.credly.com/badges/7d3acf91-708f-4bb7-9644-49d30caad4a5/linked_in_profile">FitSM Foundation</a></th>
-      <td>Scrum.org</td>
+      <td>APMG</td>
       <td>September 2022</td>
       <td>No expiration</td>
     </tr>
