--- a/motivation.html
+++ b/motivation.html
@@ -142,6 +142,7 @@ layout: page
   <thead>
     <tr>
       <th scope="col">Title</th>
+      <th scope="col">Sector</th>
       <th scope="col">Since</th>
       <th scope="col">To</th>
     </tr>
@@ -151,6 +152,7 @@ layout: page
       <th scope="row">
       	<a target="_blank" href="https://www.empethy.it/">Empethy</a>
       </th>
+      <td>Sustainability</td>
       <td>2023</td>
       <td>Present</td>
     </tr>
@@ -158,6 +160,7 @@ layout: page
       <th scope="row">
       	<a target="_blank" href="https://milan.impacthub.net/">Impact Hub Milano</a>
       </th>
+      <td>Entrepreneurship</td>
       <td>2015</td>
       <td>Present</td>
     </tr>
