--- a/certifications.html
+++ b/certifications.html
@@ -19,6 +19,18 @@ layout: page
   </thead>
   <tbody>
     <tr>
+      <th scope="row"><a target="_blank" href="https://www.credly.com/badges/c8969ef0-fcd9-404e-9757-85568128ee65/linked_in_profile">FitSM Advanced Service Planning and Delivery - Trainer</a></th>
+      <td>ICO-CERTg</td>
+      <td>September 2023</td>
+      <td>No expiration</td>
+    </tr>
+    <tr>
+      <th scope="row"><a target="_blank" href="https://www.credly.com/badges/cc068e7d-4908-4df4-98e1-d966c235d21c/linked_in_profile">FitSM Foundation - Trainer</a></th>
+      <td>ICO-CERTg</td>
+      <td>September 2023</td>
+      <td>No expiration</td>
+    </tr>
+    <tr>
       <th scope="row"><a target="_blank" href="/attachment/27001.pdf">ICO ISMS 27001:2022 Foundation </a></th>
       <td>ICO-CERTg</td>
       <td>September 2023</td>
