--- a/articles.html
+++ b/articles.html
@@ -82,3 +82,70 @@ layout: page
   </tbody>
 </table>
 
+<div class="row">
+  <div class="col-lg-12">
+    <h2>Papers</h2>
+  </div>
+</div>
+
+<table class="table table-hover">
+  <thead>
+    <tr>
+      <th scope="col">Title</th>
+      <th scope="col">Project</th>
+      <th scope="col">Issued</th>
+      <th scope="col">Language</th>
+    </tr>
+  </thead>
+  <tbody>
+  	<tr>
+      <td>
+        <a target="_blank" href="https://zenodo.org/records/12732567">Preliminary Market Scenarios & Pathways to the Future Open European CEI Ecosystem</a>
+      </td>
+      <td>
+        <a target="_blank" href="https://eucloudedgeiot.eu/">Cloud Edge IoT Continuum</a>
+      </td>
+      <td>2024</td>
+      <td>English</td>
+    </tr>
+    <tr>
+      <td>
+        <a target="_blank" href="https://zenodo.org/records/12544163">Technology Implementation Model and Architectural Patterns for CEI Use Cases</a>
+      </td>
+      <td>
+        <a target="_blank" href="https://eucloudedgeiot.eu/">Cloud Edge IoT Continuum</a>
+      </td>
+      <td>2024</td>
+      <td>English</td>
+    </tr>
+    <tr>
+      <td>
+        <a target="_blank" href="https://zenodo.org/records/8283428">Readiness Framework and Service Requirements</a>
+      </td>
+      <td>
+        <a target="_blank" href="https://eucloudedgeiot.eu/">Cloud Edge IoT Continuum</a>
+      </td>
+      <td>2023</td>
+      <td>English</td>
+    </tr>
+    <tr>
+      <td>
+        <a target="_blank" href="https://zenodo.org/records/8021076">Status of the SMS Processes</a>
+      </td>
+      <td>
+        <a target="_blank" href="https://www.egi.eu/project/egi-ace/">EGI-ACE</a>
+      </td>
+      <td>2023</td>
+      <td>English</td>
+    </tr>
+    <tr>
+      <td>
+        <a target="_blank" href="https://zenodo.org/records/7463329">Technical, Policy and Service Management Integration Report</a>
+      </td>
+      <td>
+        <a target="_blank" href="https://www.egi.eu/project/egi-ace/">EGI-ACE</a>
+      </td>
+      <td>2022</td>
+      <td>English</td>
+    </tr>
+  </tbody>
