--- a/documents.html
+++ b/documents.html
@@ -99,9 +99,9 @@ layout: page
   </thead>
   <tbody>
   	<tr>
-      <td>
+      <th scope="row">
         <a target="_blank" href="https://zenodo.org/records/12732567">Preliminary Market Scenarios & Pathways to the Future Open European CEI Ecosystem</a>
-      </td>
+      </th>
       <td>
         <a target="_blank" href="https://eucloudedgeiot.eu/">Cloud Edge IoT Continuum</a>
       </td>
@@ -109,9 +109,9 @@ layout: page
       <td>English</td>
     </tr>
     <tr>
-      <td>
+      <th scope="row">
         <a target="_blank" href="https://zenodo.org/records/12544163">Technology Implementation Model and Architectural Patterns for CEI Use Cases</a>
-      </td>
+      </th>
       <td>
         <a target="_blank" href="https://eucloudedgeiot.eu/">Cloud Edge IoT Continuum</a>
       </td>
@@ -119,9 +119,9 @@ layout: page
       <td>English</td>
     </tr>
     <tr>
-      <td>
+      <th scope="row">
         <a target="_blank" href="https://zenodo.org/records/8283428">Readiness Framework and Service Requirements</a>
-      </td>
+      </th>
       <td>
         <a target="_blank" href="https://eucloudedgeiot.eu/">Cloud Edge IoT Continuum</a>
       </td>
@@ -129,9 +129,9 @@ layout: page
       <td>English</td>
     </tr>
     <tr>
-      <td>
+      <th scope="row">
         <a target="_blank" href="https://zenodo.org/records/8021076">Status of the SMS Processes</a>
-      </td>
+      </th>
       <td>
         <a target="_blank" href="https://www.egi.eu/project/egi-ace/">EGI-ACE</a>
       </td>
@@ -139,9 +139,9 @@ layout: page
       <td>English</td>
     </tr>
     <tr>
-      <td>
+      <th scope="row">
         <a target="_blank" href="https://zenodo.org/records/7463329">Technical, Policy and Service Management Integration Report</a>
-      </td>
+      </th>
       <td>
         <a target="_blank" href="https://www.egi.eu/project/egi-ace/">EGI-ACE</a>
       </td>
